--- a/public/assets/fonts/font.css
+++ b/public/assets/fonts/font.css
@@ -11,3 +11,57 @@
     font-style: normal;
 
 }
+
+@font-face {
+    font-family: 'Space Grotesk';
+    src: 
+        url('SpaceGrotesk-Light.ttf') format('truetype');
+    font-weight: 300;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'Space Grotesk';
+    src: 
+        url('SpaceGrotesk-Regular.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'Space Grotesk';
+    src: 
+        url('SpaceGrotesk-Medium.ttf') format('truetype');
+    font-weight: 500;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'Space Grotesk';
+    src: 
+        url('SpaceGrotesk-SemiBold.ttf') format('truetype');
+    font-weight: 600;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'DM Sans';
+    src: 
+        url('SpaceGrotesk-Bold.ttf') format('truetype');
+    font-weight: 700;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'DM Sans';
+    src: 
+        url('SpaceGrotesk-Regular.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+
+}
