--- a/app/style.css
+++ b/app/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@100..600&family=Space+Grotesk:wght@300..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,900;1,300&family=Space+Grotesk:wght@600&display=swap');
 @import url('../public/assets/fonts/font.css');
 
 @tailwind base;
