--- a/public/assets/fonts/font.css
+++ b/public/assets/fonts/font.css
@@ -12,7 +12,7 @@
 
 }
 
-@font-face {
+/* @font-face {
     font-family: 'Space Grotesk';
     src: 
         url('SpaceGrotesk-Light.ttf') format('truetype');
@@ -64,4 +64,4 @@
     font-weight: 400;
     font-style: normal;
 
-}
+} */
