--- a/app/style.css
+++ b/app/style.css
@@ -84,15 +84,15 @@
 /* Features */
 
 .features .card-content h2 {
-  @apply md:max-w-md text-xl md:text-[40px]/[50px] font-bold font-title text-white mt-4
+  @apply md:max-w-md text-xl md:text-[40px]/[50px] font-bold font-title text-white md:mt-4
 }
 
 .features .card-content p {
-  @apply text-[20px]/[30px] font-normal font-text text-slate pr-7 mt-6
+  @apply text-[20px]/[30px] font-normal font-text text-slate md:pr-7 mt-4 md:mt-6
 }
 
 .features .card .pill {
-  @apply text-[22px]/[28px] font-poppins font-normal border rounded-[28px] border-border py-2 px-6
+  @apply text-xs xl:text-[22px]/[28px] font-poppins font-normal border rounded-[28px] border-border py-1 px-3 xl:py-2 xl:px-6
 }
 
 /* Partners */
