--- a/app/style.css
+++ b/app/style.css
@@ -17,11 +17,11 @@
   }
 
   input{
-    @apply w-full h-[72px] text-[21px] font-poppins font-normal border border-transparent rounded-[6px] px-6 focus:outline-0 focus:border-border bg-[#444444]
+    @apply w-full h-[36px] xl:h-[72px] text-xs xl:text-[21px] font-poppins font-normal border border-transparent rounded-[6px] px-2 xl:px-6 focus:outline-0 focus:border-border bg-[#444444]
   }
 
   input::placeholder{
-    @apply text-[21px] font-poppins font-normal text-[#A0AEC0]
+    @apply text-xs xl:text-[21px] font-poppins font-normal text-[#A0AEC0]
   }
 
   
@@ -30,7 +30,7 @@
 @layer components {
 
   .input-grp label {
-    @apply relative inline-block text-[21px] font-semibold font-poppins mb-2
+    @apply relative inline-block text-xs xl:text-[21px] font-semibold font-poppins mb-2 xl:mb-4
   }
 
   .pri-auth .input-grp .icon {
@@ -98,7 +98,7 @@
 /* Partners */
 
 .partner-content{
-  @apply relative flex gap-[64px] overflow-hidden border-y border-[#a5a9b633] py-12
+  @apply relative flex xl:gap-[64px] overflow-hidden border-y border-[#a5a9b633] py-6 xl:py-12
 }
 
 .partners{
@@ -110,11 +110,11 @@
 }
 
 .partners .bnd {
-  @apply border-r border-[#A5A9B6] px-24
+  @apply border-r border-[#A5A9B6] px-6 xl:px-24
 }
 
 .partner-content img {
-  @apply w-full
+  @apply w-[70px] xl:w-full
 }
 
 /* Auth Form */
@@ -164,7 +164,7 @@
 }
 
 .switch-label {
-  @apply cursor-pointer w-[60px] h-[30px] bg-[#2737c9] rounded-[75px] relative
+  @apply cursor-pointer w-[40px] xl:w-[60px] h-[18px] xl:h-[30px] bg-[#2737c9] rounded-[75px] relative
 }
 
 .switch-label .switch-button {
@@ -172,12 +172,12 @@
   position: absolute;
   top: 3px;
   left: 2px;
-  width: 24px;
-  height: 24px;
   border-radius: 100%;
   transition: 0.2s;
   background: #fff;
   box-shadow: 0 0 2px 0 rgba(10, 10, 10, 0.29);
+
+  @apply w-3 h-3 xl:h-6 xl:w-6
 }
 
 .switch-checkbox:checked + .switch-label .switch-button {
